Fix scrollbar display for map and list.

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 
 html, body, #root { height: 100%; }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     display: none;
 }
 
